# CCv2

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
docs/files/: lpb.md  lpj.md  lpk.md  lpm.md  lpz.md
internal/icons/: icon.pdn
internal/keyframes/: button_session.lpk  button_session_off.lpk  button_user.lpk  button_user_off.lpk  loading.lpk  loading_entry.lpk  splash.lpk  splash_entry.lpk
internal/schemas/: project_v1.json
lightmaps/: ClassicMiniS  ClassicMiniS.lpm  Mk2+  Mk2+Realism  Push2  Push2Edges  Push2Edges.lpm
src/CCv2/: __main__.py  constants.py  lightmap.py  logger.py  ptypes.py  singleton.py
src/CCv2/audio/: audio_route.py  track.py
src/CCv2/launchpad/: base.py  lpclassic.py  lpmini.py  lppro.py  lps.py  midiio.py  mk1mini.py  mk2.py  mk3mini.py  mk3pro.py  route.py
src/CCv2/lighting/: generator.py  keyframes.py  lightmanager.py  lightmap.py
src/CCv2/project/: baking.py  loader.py  project.py  track.py
src/CCv2/scripts/: __init__.py  lightmap.py  list_audio_devices.py  perfectgradient.py  saveconvert.py
src/CCv2/ui/: category_ui.py  generator_ui.py  launchpad_ui.py  main_ui.py  pool_ui.py  proj_ui.py  props_ui.py  track_ui.py  web_ui.py
src/CCv2/utils/: animations.py  color.py  daemon_thread.py  data_uri.py  ffmpeg.py  filedialog.py  json_wrapper.py  runtime.py  ui_property.py  versioning.py
web/: index.css  index.html  index.js  launchpad.html  preload.js  webmidi.html
